--- a/vue_app_ssp/package.json
+++ b/vue_app_ssp/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "xz_admin_v2",
+  "name": "maoyan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8080 --host 127.0.0.1",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "mint-ui": "^2.2.9",
-    "vue": "^2.5.16",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1",
+    "axios": "^0.19.0",
+    "core-js": "^2.6.5",
+    "mint-ui": "^2.2.13",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.5",
-    "@vue/cli-service": "^3.0.0-rc.5",
-    "vue-template-compiler": "^2.5.16"
+    "@vue/cli-plugin-babel": "^3.9.0",
+    "@vue/cli-service": "^3.9.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
     "plugins": {
@@ -26,7 +26,6 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 2 versions"
   ]
 }
